[tool.poetry]
name = "sd-python"
version = "0.1.0"
description = ""
authors = ["Kubanychbek uulu Kairat <kubanychbekukairat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
alembic = "^1.13.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
